<resources>
    <string name="app_name">YNAB task</string>
    <string name="name">Name</string>
    <string name="updated_at">Updated Date</string>
    <string name="first_month">First month</string>
    <string name="last_month">Last month</string>
    <string name="accounts">accounts</string>
    <string name="account">account</string>
    <string name="no_internet">Please Check your internet connection</string>
    <string name="text_cancel">Cancel</string>
    <string name="fill_acc_data">Please fill coming inputs to create new Account.</string>
    <string name="create">Create</string>
    <string name="acc_name">Account name</string>
    <string name="acc_balance">Account balance</string>
    <string name="empty_error">Please Fill data</string>
    <string name="acc_created">Account Created</string>
    <string name="transaction_created">Transaction  Created</string>
    <string name="type">Account type</string>
    <string name="note">Note</string>
    <string name="payee">Payee</string>
    <string name="amount">Amount</string>
    <string name="approved">Approved</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="category_name">Category name</string>
    <string name="empty_data">"No transaction for this payee "</string>
    <string name="add_transaction">Add transaction</string>
    <string name="set_transaction_amount">"Please add Transaction amount "</string>
    <string name="budgets_ist">Budget list</string>
    <string name="account_List">Account list</string>
    <string name="payee_transactionList">Payee Transactions  list</string>
    <string name="payee_list">Select a Payee </string>
</resources>