<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true"
        android:focusable="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_transaction_amount"
        android:textSize="@dimen/large_text"
        android:textColor="@color/grey_900"
        android:layout_marginBottom="8dp"
        />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acc_balance"
            android:id="@+id/dialog_acc_balance_input_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_600"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:background="@color/grey_50"
                android:id="@+id/dialog_acc_balance_input"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        >

        <com.google.android.material.button.MaterialButton
            android:textColor="@color/semi_dark_text"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="@dimen/mid_text"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            android:id="@+id/dialog_cancel"
            />

        <com.google.android.material.button.MaterialButton
            android:textSize="@dimen/mid_text"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/dialog_confirm"
            />

    </LinearLayout>

</LinearLayout>