<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="sotra.ynab.databinding.BudgetItemBinding">
        <variable
            name="item"
            type="sotra.ynab.data.budgets.Budget" />

        <variable
            name="callback"
            type="sotra.ynab.ui.budgetFragment.BudgetListItemCallback" />

    </data>
<com.google.android.material.card.MaterialCardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{item.name}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{item.last_modified_on}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/first_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{item.first_month}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/last_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{item.last_month}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


       <LinearLayout
           android:gravity="end"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <com.google.android.material.button.MaterialButton
               android:id="@+id/show_payees"
               style="@style/Widget.MaterialComponents.Button.TextButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
               android:layout_marginEnd="8dp"
               android:text="@string/payee"
               app:icon="@drawable/baseline_account_balance_black_24dp"
               android:onClick="@{()->callback.payees(item)}"
               />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/create_acc"
               style="@style/Widget.MaterialComponents.Button.TextButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
               android:layout_marginEnd="8dp"
               android:text="@string/account"
               app:icon="@drawable/baseline_add_circle_outline_black_24dp"
               android:onClick="@{()->callback.addAccount(item)}"
               />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/view_accounts"
               style="@style/Widget.MaterialComponents.Button.TextButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
               android:layout_marginEnd="8dp"
               android:text="@string/accounts"
               app:icon="@drawable/baseline_supervisor_account_black_24dp"
               android:onClick="@{(view)->callback.viewAccounts(item)}"
               />

       </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</layout>