<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="sotra.ynab.databinding.AccountItemBinding">
        <variable
            name="item"
            type="sotra.ynab.data.budgets.Account" />
    <import type="android.view.View"/>
        <variable
            name="callback"
            type="sotra.ynab.ui.accountsFragment.AccountListItemCallback" />
    </data>

<com.google.android.material.card.MaterialCardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/acc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{item.name}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/acc_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{Integer.toString(item.balance)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{item.type}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:visibility="@{item.type}"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:elevation="0dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            app:cornerRadius="0dp"
            android:background="@color/purple_500"
            android:layout_height="wrap_content"
            app:iconGravity="textStart"
            android:text="@string/add_transaction"
            app:icon="@drawable/baseline_add_black_24dp"
            android:onClick="@{(view)->callback.addTransaction(item)}"
            />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</layout>