<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="sotra.ynab.databinding.TransactionItemBinding">
        <variable
            name="item"
            type="sotra.ynab.data.transaction.Transaction" />
    <import type="android.view.View"/>
    </data>

<com.google.android.material.card.MaterialCardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/acc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{item.account_name}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{Integer.toString(item.amount)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/approved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@{ item.approved ? @string/yes : @string/no }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:visibility="@{item.category_name}"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:text="@string/category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@{item.category_name}"
                android:layout_marginStart="8dp"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/mid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</layout>